Fix layout issues

--- a/themes/sbvfrd/less/detailpage.less
+++ b/themes/sbvfrd/less/detailpage.less
@@ -71,6 +71,8 @@
 }
 
 .record-references {
+  margin-bottom: 2.35rem;
+  
   ul > li > a {
 
     &.icon-arrow-external-link:before {
@@ -147,9 +149,13 @@ button.accordion-collapse {
 }
 
 
-@media (max-width: @screen-xs-max) {
+@media (max-width: @screen-sm-max) {
   .page-anchors {
     margin-top: 1.43rem;
+    margin-bottom: 1rem;
+  }
+
+  .record-references {
     margin-bottom: 2.11rem;
   }
 
